# internet_downloader

./: CMakeLists.txt  README.md
Internet Downloader/: Internet Downloader.vcxproj  Internet Downloader.vcxproj.filters  connection.h  file_block.cpp  filemanager.cpp  filemanager.h  iocp_base.cpp  iocp_base.h  session.cpp  session.h  util_container.h  utility.cpp
lib/: libboost_system-vc120-mt-gd-1_60.lib
source/: CMakeLists.txt  Internet_Downloader.cpp  Internet_Downloader.h  cache_control.cpp  cache_control.h  connection.cpp  connection.h  down_task.cpp  down_task.h  file_block.cpp  file_block.h  file_io.cpp  file_io.h  file_ma.cpp  file_ma.h  global_state_cache.cpp  global_state_cache.h  http_parse.cpp  http_parse.h  json_rpc.cpp  json_rpc.h  main.cpp  net_io.cpp  net_io.h  preferences.cpp  preferences.h  task_schedule.cpp  task_schedule.h  test.cpp  utility.h
source/common/: global_def.h  iocp_base.cpp  iocp_base.h  uri_parse.cpp  uri_parse.h  util_container.h  utility.cpp  utility.h
